# bevy_pixcam

./: .gitignore  Cargo.toml  README.md  devenv.nix
examples/: flappin.rs  mire.rs  readme.rs
src/: lib.rs  pixel_border.rs  pixel_camera.rs  pixel_zoom.rs  plugin.rs  zoom.rs
