[package]
name = "bevy_pixcam"
version = "0.17.0"
authors = [
    "drakmaniso <moussault.laurent@gmail.com>",
    "Christopher Kaster <me@atomicptr.de>",
]
edition = "2024"
description = "A simple pixel-perfect camera plugin for Bevy, suitable for pixel-art"
readme = "README.md"
repository = "https://github.com/atomicptr/bevy_pixcam"
keywords = ["bevy", "graphics", "2d", "pixels", "pixel-art"]
categories = ["graphics", "game-development"]
exclude = ["assets/**", "devenv*"]
license = "MIT"

[dependencies]
bevy = { version = "0.17.1", default-features = true, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
] }

[dev-dependencies]
bevy = { version = "0.17.1", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_state",
    "png",
    "multi_threaded",
    "x11",
    "wayland",
] }

[[example]]
name = "flappin"

[[example]]
name = "mire"

[[example]]
name = "readme"
